# ipfs-mcp-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __main__.py  debug_server.py  ipfs_mcp_server.py  pyproject.toml  requirements-dev.txt  test_connection.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md  USAGE.md
examples/: claude_desktop_config.json  config_with_pip.json
tests/: test_server.py
